tests/baselines/reference/continueNotInIterationStatement2.errors.txt
==== tests/cases/compiler/continueNotInIterationStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        continue;
        ~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
      }
    }